# dtcat

./: .gitignore  CHANGELOG.md  CTSTATUS.FCS  LICENSE  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: setup-linux.md  setup-macos.md  setup-windows.md
scripts/: install-faircom.ps1  install-faircom.sh
src/dtcat/: __init__.py  cli.py  doctor.py  exporter.py  faircom.py  parser.py  reader.py  server.py
tests/: conftest.py  test_smoke.py
tests/e2e/: test_pipeline.py
tests/fixtures/: sample01.dtc  sample01.idx
tests/integration/: test_native.py  test_odbc.py
tests/unit/: test_cli.py  test_doctor.py  test_doda_native.py  test_exporter.py  test_parser.py  test_reader.py  test_server.py
