[project]
name = "dtcat"
version = "0.1.0"
description = "Leitor e exporter de arquivos .dtc (FairCom c-tree ISAM) — standalone, sem Protheus"
readme = "README.md"
license = "MIT"
authors = [{ name = "Tiago Barbieri", email = "tiagohbarbieri@gmail.com" }]
requires-python = ">=3.11"
keywords = ["c-tree", "ctree", "faircom", "isam", "dtc", "protheus", "advpl", "totvs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "typer >=0.15",
    "rich >=13.7",
    "pyodbc >=5.0",
    "pandas >=2.2",
    "openpyxl >=3.1",
]

[project.urls]
Homepage = "https://github.com/tbarbito/dtcat"
Issues = "https://github.com/tbarbito/dtcat/issues"
Source = "https://github.com/tbarbito/dtcat"

[project.scripts]
dtcat = "dtcat.cli:app"

[dependency-groups]
dev = [
    "pytest >=8.0",
    "pytest-cov >=5.0",
    "ruff >=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtcat"]

[tool.ruff]
line-length = 100
target-version = "py311"
