[project]
name = "dtcat"
version = "0.5.0"
description = "Standalone reader/exporter for c-tree ISAM data files (.dtc). CSV / JSON / XLSX export, cross-platform CLI."
readme = "README.md"
license = "MIT"
authors = [{ name = "Tiago Barbieri", email = "tiagohbarbieri@gmail.com" }]
requires-python = ">=3.11"
keywords = ["c-tree", "ctree", "faircom", "isam", "dtc", "etl", "data-export"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "typer >=0.15",
    "rich >=13.7",
    "pandas >=2.2",
    "openpyxl >=3.1",
]
# Nota: a conexão com o c-tree usa o driver Python NATIVO (pyctree) que acompanha
# o FairCom DB Developer Edition, carregado em runtime de $FAIRCOM_HOME. Não é uma
# dependência PyPI — por isso pyodbc/unixODBC não são mais necessários.

[project.urls]
Homepage = "https://github.com/tbarbito/dtcat"
Issues = "https://github.com/tbarbito/dtcat/issues"
Source = "https://github.com/tbarbito/dtcat"

[project.scripts]
dtcat = "dtcat.cli:app"

[dependency-groups]
dev = [
    "pytest >=8.0",
    "pytest-cov >=5.0",
    "pytest-mock >=3.12",
    "ruff >=0.6",
    "mypy >=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtcat"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not integration and not e2e",
]
markers = [
    "integration: requires FairCom DB Developer Edition installed (set FAIRCOM_HOME)",
    "e2e: requires FairCom + sample .dtc fixture in tests/fixtures/",
]

[tool.coverage.run]
source = ["src/dtcat"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
